melior/src/dialect/snapshots/melior__dialect__ods__tests__addf_builder.snap
---
source: melior/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  llvm.func @foo(%arg0: f32, %arg1: f32) {
    %0 = arith.addf %arg0, %arg1 : f32
    llvm.return
  }
}
