melior/src/dialect/snapshots/melior__dialect__ods__tests__linalg.add.snap
---
source: melior/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: memref<4x4xf32>, %arg1: memref<4x4xf32>, %arg2: memref<4x4xf32>) {
    linalg.add ins(%arg0, %arg1 : memref<4x4xf32>, memref<4x4xf32>) outs(%arg2 : memref<4x4xf32>)
    return
  }
}
