melior/src/dialect/snapshots/melior__dialect__ods__tests__linalg.conv_2d_nhwc_hwcf.snap
---
source: melior/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: memref<1x8x8x3xf32>, %arg1: memref<3x3x3x4xf32>, %arg2: memref<1x3x3x4xf32>) {
    linalg.conv_2d_nhwc_hwcf {strides = dense<2> : tensor<2xi64>} ins(%arg0, %arg1 : memref<1x8x8x3xf32>, memref<3x3x3x4xf32>) outs(%arg2 : memref<1x3x3x4xf32>)
    return
  }
}
