melior/src/dialect/snapshots/melior__dialect__ods__tests__linalg.matmul_on_tensors.snap
---
source: melior/src/dialect/ods.rs
expression: module.as_operation()
---
module {
  func.func @foo(%arg0: tensor<4x4xf32>, %arg1: tensor<4x4xf32>, %arg2: tensor<4x4xf32>) {
    %0 = linalg.matmul ins(%arg0, %arg1 : tensor<4x4xf32>, tensor<4x4xf32>) outs(%arg2 : tensor<4x4xf32>) -> tensor<4x4xf32>
    return
  }
}
